sustainability logo width fixes and signup modal overflow fixes

--- a/assets/styles/partials/_component.signups-popup.scss
+++ b/assets/styles/partials/_component.signups-popup.scss
@@ -11,7 +11,9 @@
         width: max-content;
         height: max-content;
         max-width: 816px;
-        max-height: 700px;
+        /* max-height: 700px; */
+        max-height: calc(100vh - 60px);
+        overflow: auto;
         margin: 0 auto;
         background: $white;
         padding: 70px;
@@ -75,7 +77,7 @@
         padding: 5px 0;
 
         &.sustainable_logo {
-            height: 25px;
+            height: 24px;
             object-fit: contain;
             @media #{$mobile}{
                 padding: 4px 0;
